// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator renders correctly horizontally 1`] = `
<DocumentFragment>
  .cache-1c0ixtd-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e9eaeb;
}

<hr
    aria-orientation="horizontal"
    class="cache-1c0ixtd-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly vertically 1`] = `
<DocumentFragment>
  .cache-wzysv3-StyledHr {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e9eaeb;
}

<hr
    aria-orientation="vertical"
    class="cache-wzysv3-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom color 1`] = `
<DocumentFragment>
  .cache-1xrv66a-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #521094;
}

<hr
    aria-orientation="horizontal"
    class="cache-1xrv66a-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom color and icon 1`] = `
<DocumentFragment>
  .cache-1gpqkcp-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1inhs19-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #521094;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-894bwc-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #641cb3;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  fill: #521094;
}

.cache-894bwc-sizeStyles-StyledIcon .fillStroke {
  stroke: #641cb3;
  fill: none;
}

<div
    aria-orientation="horizontal"
    class="cache-1gpqkcp-StyledIconWrapper e1d1zom92"
    role="separator"
  >
    <hr
      class="cache-1inhs19-StyledHr e1d1zom90"
    />
    <svg
      class="e1d1zom91 cache-894bwc-sizeStyles-StyledIcon e1gt4cfo0"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 4a.75.75 0 0 1 .75.75v12.59l1.95-2.1a.75.75 0 1 1 1.1 1.02l-3.25 3.5a.75.75 0 0 1-1.1 0l-3.25-3.5a.75.75 0 1 1 1.1-1.02l1.95 2.1V4.75A.75.75 0 0 1 12 4"
        fill-rule="evenodd"
      />
      <path
        d="M14 6a2 2 0 1 1-4 0 2 2 0 0 1 4 0"
      />
    </svg>
    <hr
      class="cache-1inhs19-StyledHr e1d1zom90"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon 1`] = `
<DocumentFragment>
  .cache-1gpqkcp-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-mqe1it-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e9eaeb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1g60200-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #3f4250;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  fill: #e9eaeb;
}

.cache-1g60200-sizeStyles-StyledIcon .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    aria-orientation="horizontal"
    class="cache-1gpqkcp-StyledIconWrapper e1d1zom92"
    role="separator"
  >
    <hr
      class="cache-mqe1it-StyledHr e1d1zom90"
    />
    <svg
      class="e1d1zom91 cache-1g60200-sizeStyles-StyledIcon e1gt4cfo0"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 4a.75.75 0 0 1 .75.75v12.59l1.95-2.1a.75.75 0 1 1 1.1 1.02l-3.25 3.5a.75.75 0 0 1-1.1 0l-3.25-3.5a.75.75 0 1 1 1.1-1.02l1.95 2.1V4.75A.75.75 0 0 1 12 4"
        fill-rule="evenodd"
      />
      <path
        d="M14 6a2 2 0 1 1-4 0 2 2 0 0 1 4 0"
      />
    </svg>
    <hr
      class="cache-mqe1it-StyledHr e1d1zom90"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon horizontally 1`] = `
<DocumentFragment>
  .cache-1gpqkcp-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-mqe1it-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e9eaeb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1g60200-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #3f4250;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  fill: #e9eaeb;
}

.cache-1g60200-sizeStyles-StyledIcon .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    aria-orientation="horizontal"
    class="cache-1gpqkcp-StyledIconWrapper e1d1zom92"
    role="separator"
  >
    <hr
      class="cache-mqe1it-StyledHr e1d1zom90"
    />
    <svg
      class="e1d1zom91 cache-1g60200-sizeStyles-StyledIcon e1gt4cfo0"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 4a.75.75 0 0 1 .75.75v12.59l1.95-2.1a.75.75 0 1 1 1.1 1.02l-3.25 3.5a.75.75 0 0 1-1.1 0l-3.25-3.5a.75.75 0 1 1 1.1-1.02l1.95 2.1V4.75A.75.75 0 0 1 12 4"
        fill-rule="evenodd"
      />
      <path
        d="M14 6a2 2 0 1 1-4 0 2 2 0 0 1 4 0"
      />
    </svg>
    <hr
      class="cache-mqe1it-StyledHr e1d1zom90"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon vertically 1`] = `
<DocumentFragment>
  .cache-15vpxe5-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-vlk2oc-StyledHr {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e9eaeb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1g60200-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #3f4250;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  fill: #e9eaeb;
}

.cache-1g60200-sizeStyles-StyledIcon .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    aria-orientation="vertical"
    class="cache-15vpxe5-StyledIconWrapper e1d1zom92"
    role="separator"
  >
    <hr
      class="cache-vlk2oc-StyledHr e1d1zom90"
    />
    <svg
      class="e1d1zom91 cache-1g60200-sizeStyles-StyledIcon e1gt4cfo0"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 4a.75.75 0 0 1 .75.75v12.59l1.95-2.1a.75.75 0 1 1 1.1 1.02l-3.25 3.5a.75.75 0 0 1-1.1 0l-3.25-3.5a.75.75 0 1 1 1.1-1.02l1.95 2.1V4.75A.75.75 0 0 1 12 4"
        fill-rule="evenodd"
      />
      <path
        d="M14 6a2 2 0 1 1-4 0 2 2 0 0 1 4 0"
      />
    </svg>
    <hr
      class="cache-vlk2oc-StyledHr e1d1zom90"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom thickness 1`] = `
<DocumentFragment>
  .cache-i90w9x-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 3px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e9eaeb;
}

<hr
    aria-orientation="horizontal"
    class="cache-i90w9x-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-1c0ixtd-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #e9eaeb;
}

<hr
    aria-orientation="horizontal"
    class="cache-1c0ixtd-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;
